<resources>
    <string name="dialog_editlesson_text_subject">Class</string>
    <string name="dialog_editlesson_text_location">Location</string>
    <string name="dialog_editlesson_text_professor">Instructor</string>
    <string name="dialog_editlesson_text_color">Color</string>
    <string name="dialog_editlesson_text_memo">Memo</string>
    <string name="fragment_timetable_timeline_period">Period</string>
    <string name="fragment_timetable_notice_lessoncopied">Class schedule duplicated</string>
    <string name="fragment_timetable_warning_over24h">A day cannot exceed 24 hours.</string>
    <string name="fragment_timetable_warning_leaveoneperiod">Need at least one period</string>
    <string name="fragment_timetable_warning_tableLengthLowerThanLesson_A">Due to existing </string>
    <string name="fragment_timetable_warning_tableLengthLowerThanLesson_B">class, Need at least</string>
    <string name="fragment_timetable_warning_tableLengthLowerThanLesson_C"></string>
    <string name="fragment_timetable_warning_tableLengthLowerThanLesson_D">periods.</string>
    <string name="fragment_timetable_warning_deleteMainTable">You should have at least one timetable.</string>
    <string name="fragment_timetable_warning_lessonAlreadyExists">Time conflict: class overlap</string>
    <string name="dialog_deletetimetable_title">Are you sure to delete the timetable?</string>
    <string name="fragment_schedule_title">Scheduler</string>
    <string name="fragment_schedule_add_schedule">Add event</string>
    <string name="fragment_schedule_sync">Sync Google Calendar</string>
    <string name="activity_schedule_edit_title">Edit event</string>
    <string name="activity_schedule_edit_lessonPick_spinner_prompt">Choose your class related event</string>
    <string name="activity_schedule_edit_alarm_spinner_prompt">Alarm Time</string>
    <string name="activity_schedule_edit_date_title">Date</string>
    <string name="activity_schedule_edit_schedulename_title">Title</string>
    <string name="activity_schedule_edit_memo_title">Memo</string>
    <string name="activity_schedule_edit_alarm_title">Alarm</string>
    <string name="timetable_setting_select_startday_prompt">The first day of the week</string>
    <string name="timetable_setting_select_startday_title">Choose the first day of the week</string>
    <string name="timetable_setting_select_endday_prompt">The last day of the week</string>
    <string name="timetable_setting_select_endday_title">Choose the last day of the week</string>
    <string name="timetable_setting_select_columnType_prompt">Period lable</string>
    <string name="timetable_setting_select_columnType_title">Choose period lable</string>
    <string name="timetable_setting_select_columnNum_prompt">How Many</string>
    <string name="timetable_setting_select_columnNum_title">Choose number of periods</string>
    <string name="timetable_setting_select_startTime_prompt">Start time</string>
    <string name="timetable_setting_select_startTime_title">Choose your start time</string>
    <string name="timetable_setting_select_timeOffset_prompt">Timeframe Lengths</string>
    <string name="timetable_setting_select_timeOffset_title">Choose the length of each time frame</string>
    <string name="timetable_setting_select_lessonAlarm_prompt">Timetable Notifications Setting</string>
    <string name="timetable_setting_select_lessonAlarm_title">Set Timetable Notifications</string>
    <string name="timetable_setting_select_startday_warning_overlapdays">First and last days are overlapped</string>
    <string name="timetable_setting_select_endday_warning_overlapdays">Last and start days are overlapped</string>
    <string name="timetable_setting_warning_tableinit_on_starttimechange">If you change your start time, time table will be reset</string>
    <string name="timetable_setting_warning_tableinit_on_timeoffsetchange">If you change your time set, time table will be reset</string>
    <string name="timetable_setting_theme_select_theme_prompt">Theme</string>
    <string name="timetable_setting_theme_select_theme_title">Choose your theme</string>
    <string name="timetable_setting_info_shop">Store</string>
    <string name="timetable_setting_info_yooii_info">Timetable Kit Info</string>
    <string name="timetable_setting_info_rate">Rate Timetable Kit</string>
    <string name="timetable_setting_info_linkfacebook">Like us on Facebook</string>
    <string name="timetable_setting_info_credit">Credits</string>
    <string name="timetable_setting_info_yooiistudio">Yooii Studios</string>
    <string name="timetable_setting_info_help">Timetable Kit Help</string>
    <string name="timetable_setting_info_restore_purchases">Restore purchases</string>
    <string name="timetable_setting_info_license">License</string>
    <string name="timetable_setting_info_version">Version</string>
    <string name="tab_timetablesetting">Basic Settings</string>
    <string name="tab_timetabletheme">Theme</string>
    <string name="tab_alarmandtheme">Notif\\Theme</string>
    <string name="tab_info">Store / Info</string>
    <string name="notice">Alarm!</string>
    <string name="unlock_full_version">Buy the full version!</string>
    <string name="buy_full_version_explain">Upgrade to unlock all features + No Ad</string>
    <string name="app_name">Timetable Kit</string>
    <string name="edit_your_timetable_title">Timetable Main Title</string>
    <string name="drawer_add_timetable">Add timetable</string>
    <string name="menu_store">Store</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_send_feedback">Send Feedback</string>
    <string name="menu_help">Help</string>
    <string name="activity_show_all_goto_overlap_mode">Stack view mode</string>
    <string name="activity_show_all_select_least_one_table">Select at least one timetable to stack.</string>
    <string name="activity_overlap_error_null">No timetables to stack up!</string>
    <string name="activity_store_already_unlocked_full">Already purchased full version. </string>
    <string name="activity_store_unable_to_pay">Currently not available for purchase.</string>
    <string name="activity_store_purchase_cancelled">Purchase cancelled</string>
    <string name="activity_store_thanks_for_unlock">Thank you for unlocking the full version!</string>
    <string name="fragment_timetable_warning_upload_key_duplicate">Password already exists. Please select another one. </string>
    <string name="fragment_timetable_notice_adding_timetable">Creating a new timetable...</string>
    <string name="fragment_timetable_share_upload_succeed">Sent successfully!</string>
    <string name="fragment_timetable_share_download_succeed">Received successfully!</string>
    <string name="dialog_cleartimetable_title">Do you want to delete all classes?</string>
    <string name="dialog_deleteschedule_title">Do you want to delete the event?</string>
    <string name="dialog_sharetimetable_title">Share your timetable!</string>
    <string name="fragment_to_addtable_title">Additional functions</string>
    <string name="dialog_editschedule_text_class">Class</string>
    <string name="dialog_editschedule_spinner_picklesson_prompt">Please select a related class.</string>
    <string name="dialog_editschedule_spinner_pickalarm_prompt">Set alarm time</string>
    <string name="dialog_settings_daypick_title">Day setting</string>
    <string name="dialog_settings_periodpick_title">Period setting</string>
    <string name="dialog_settings_timepick_title">Start time and Interval</string>
    <string name="dialog_sharedata_now_uploading_message">Sending timetable...</string>
    <string name="dialog_sharedata_now_downloading_message">Receiving timetable...</string>
    <string name="title_gc_sync">Upload your schedule</string>
    <string name="gc_sync_btn">Sync</string>
    <string name="warning_gc_sync_must_have_google_account">Register your gmail account to sync Google Calender.</string>
    <string name="warning_gc_sync_must_have_latest_google_play">Please update to the newest version of Google Play/ the system requires the newest version of Google Play</string>
    <string name="warning_gc_sync_device_reject">Cannot sync with this device</string>
    <string name="progress_err">Connection cancelled </string>
    <string name="progress_checking">Checking calender data</string>
    <string name="progress_create_calendar">Creating calender</string>
    <string name="progress_clear_event">Refreshing events...</string>
    <string name="progress_upload_schedule">Uploading schedule...</string>
    <string name="progress_download_event">Downloading events...</string>
    <string name="progress_done">Completed!</string>
    <string name="sync_failed">Failed to sync...</string>
    <string name="timetable_setting_alarm_cancelled">Alarms have been disabled</string>
    <string name="timetable_setting_alarm_on_time">Alarm set to hourly</string>
    <string name="timetable_setting_alarm_before_A">Alarm set for </string>
    <string name="timetable_setting_alarm_before_B"> minutes from now.</string>
    <string name="loading">Loading...</string>
    <string name="delete">Delete</string>
    <string name="pleaseWaitWhileLoading">Loading...</string>
    <string name="starting_connection">Connecting...</string>
    <string name="cancelled">Cancelled</string>
    <string name="unlock_full_version_pagenum_overflow">Add more timetables.</string>
    <string name="unlock_full_version_schedule_overflow">Please buy the Pro Version to add more events.</string>
    <string name="buy_full_version">Buy and enjoy the full version!</string>
    <string name="send_feedback_subject">Timetable Kit feedback</string>
    <string name="send_feedback_title">Send us your feedback!</string>
    <string name="dialog_share_data_upload_limited_A">Maximum number of timetable to send per day is </string>
    <string name="dialog_share_data_upload_limited_B">.</string>
    <string name="dialog_share_data_download_limited_A">Maximum number of timetable to receive per day is </string>
    <string name="dialog_share_data_download_limited_B">.</string>
    <string name="dialog_sharedata_upload_title">Send</string>
    <string name="dialog_sharedata_download_title">Receive</string>
    <string name="activity_setting_viewpager_dayprompt">Day</string>
    <string name="activity_setting_viewpager_periodprompt">Period</string>
    <string name="activity_setting_viewpager_timeprompt">Start time and Interval</string>
    <string name="activity_setting_viewpager_alarmprompt">Timetable Notifications</string>
    <string name="activity_setting_viewpager_themeprompt">Theme</string>
    <string name="activity_setting_viewpager_languageprompt">Language</string>
    <string name="connector_result_failed">Failed to connect</string>
    <string name="connector_result_network_error">Network Error!</string>
    <string name="connector_result_data_null">Failed to connect or the timetable data doesn\'t exist.</string>
    <string name="connector_result_data_limit_reached">You already sent the maximum number of timetables today.</string>
    <string name="connector_result_duplicated_key">Same password already exists。</string>
    <string name="dialog_share_data_dataremovedafter24hours">Your timetable will be deleted from the server after 24 hours. </string>
    <string name="terms_of_service">Terms of Service</string>
    <string name="drawer_overlap_timetables">Stack View</string>
    <string name="drawer_show_all_timetables">Flow view</string>
    <string name="activity_store_moretheme">All Themes</string>
    <string name="activity_store_noads">No AD</string>
    <string name="activity_store_alarm">Alarm Function</string>
    <string name="activity_store_moretables">Add up to 10 timetables</string>
    <string name="activity_store_moreschedules">Add unlimited events</string>
    <string name="menu_recommend_friends">Recommend to your friends!</string>
</resources>