<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_timetable_option_ytinfo_scroll"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#2e2e2e"
    tools:ignore="HardcodedText,ContentDescription,RtlHardcoded,RelativeOverlap">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <RelativeLayout
            android:id="@+id/activity_timetable_option_ytinfo_yooiistudios"
            android:layout_width="match_parent"
            android:layout_height="@dimen/fragment_settings_item_height"
            android:layout_marginLeft="@dimen/view_timetable_settings_item_margin"
            android:layout_marginRight="@dimen/view_timetable_settings_item_margin"
            android:layout_marginTop="@dimen/view_timetable_settings_item_margin"
            android:layout_marginBottom="0dp"
            android:gravity="center_vertical"
            android:background="@drawable/yt_setting_item_background" >

            <TextView
                android:id="@+id/activity_timetable_option_ytinfo_yooiistudios_prompt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_marginLeft="@dimen/fragment_settings_text_margin_left"
                android:text="@string/timetable_setting_info_yooiistudio"
                android:textColor="#000000"
                android:textSize="22sp" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/activity_timetable_option_ytinfo_help"
            android:layout_width="match_parent"
            android:layout_height="@dimen/fragment_settings_item_height"
            android:layout_marginLeft="@dimen/view_timetable_settings_item_margin"
            android:layout_marginRight="@dimen/view_timetable_settings_item_margin"
            android:layout_marginTop="@dimen/view_timetable_settings_item_margin"
            android:layout_marginBottom="0dp"
            android:gravity="center_vertical"
            android:background="@drawable/yt_setting_item_background" >

            <TextView
                android:id="@+id/activity_timetable_option_ytinfo_help_prompt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_marginLeft="@dimen/fragment_settings_text_margin_left"
                android:text="@string/timetable_setting_info_help"
                android:textColor="#000000"
                android:textSize="22sp" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/activity_timetable_option_ytinfo_termsofservice"
            android:layout_width="match_parent"
            android:layout_height="@dimen/fragment_settings_item_height"
            android:layout_marginLeft="@dimen/view_timetable_settings_item_margin"
            android:layout_marginRight="@dimen/view_timetable_settings_item_margin"
            android:layout_marginTop="@dimen/view_timetable_settings_item_margin"
            android:layout_marginBottom="0dp"
            android:gravity="center_vertical"
            android:background="@drawable/yt_setting_item_background" >

            <TextView
                android:id="@+id/activity_timetable_option_ytinfo_termsofservice_prompt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_marginLeft="@dimen/fragment_settings_text_margin_left"
                android:text="@string/terms_of_service"
                android:textColor="#000000"
                android:textSize="22sp" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/activity_timetable_option_ytinfo_license"
            android:layout_width="match_parent"
            android:layout_height="@dimen/fragment_settings_item_height"
            android:layout_marginLeft="@dimen/view_timetable_settings_item_margin"
            android:layout_marginRight="@dimen/view_timetable_settings_item_margin"
            android:layout_marginTop="@dimen/view_timetable_settings_item_margin"
            android:layout_marginBottom="0dp"
            android:gravity="center_vertical"
            android:background="@drawable/yt_setting_item_background" >

            <TextView
                android:id="@+id/activity_timetable_option_ytinfo_yooiistudios_license_prompt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_marginLeft="@dimen/fragment_settings_text_margin_left"
                android:text="@string/timetable_setting_info_license"
                android:textColor="#000000"
                android:textSize="22sp" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/activity_timetable_option_ytinfo_version"
            android:layout_width="match_parent"
            android:layout_height="@dimen/fragment_settings_item_height"
            android:layout_margin="5dip"
            android:gravity="center_vertical"
            android:background="@drawable/yt_setting_item_background" >

            <TextView
                android:id="@+id/activity_timetable_option_ytinfo_version_prompt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_marginLeft="@dimen/fragment_settings_text_margin_left"
                android:text="@string/timetable_setting_info_version"
                android:textColor="#000000"
                android:textSize="22sp" />

            <TextView
                android:id="@+id/activity_timetable_option_ytinfo_version_prompt2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_marginRight="@dimen/fragment_settings_text_margin_left"
                android:text="0.0.0"
                android:textColor="#000000"
                android:textSize="22sp"/>
        </RelativeLayout>
    </LinearLayout>
</ScrollView>