<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#404040"
    android:orientation="vertical" >

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent" >

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:onClick="onUnlockFullVersionClicked" >

            <RelativeLayout
                android:id="@+id/activity_store_redesign_unlock_full_wrapper"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:gravity="center_horizontal" >

                <ImageView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentTop="true"
                    android:adjustViewBounds="true"
                    android:src="@drawable/store_title_img" />

                <TextView
                    android:id="@+id/activity_store_redesign_text_buyfull_a"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="10dp"
                    android:gravity="center"
                    android:text="@string/buy_full_version"
                    android:textColor="#ffffff"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/activity_store_redesign_text_buyfull_b"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/activity_store_redesign_text_buyfull_a"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="10dp"
                    android:gravity="center"
                    android:text="@string/buy_full_version_explain"
                    android:textColor="#404040"
                    android:textSize="12sp" />

                <TextView
                    android:id="@+id/activity_store_redesign_text_price"
                    android:layout_width="75dp"
                    android:layout_height="75dp"
                    android:layout_below="@id/activity_store_redesign_text_buyfull_b"
                    android:layout_marginLeft="30dp"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/store_price_background"
                    android:gravity="center"
                    android:text="---"
                    android:textColor="#ffffff"
                    android:textSize="19sp"
                    android:textStyle="bold" />
            </RelativeLayout>

            <LinearLayout
                android:id="@+id/activity_store_icon_wrapper_A"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_below="@+id/activity_store_redesign_unlock_full_wrapper"
                android:layout_margin="10dp"
                android:orientation="horizontal" >

                <RelativeLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1" >

                    <ImageView
                        android:id="@+id/activity_store_no_themelock_imageview"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="5dp"
                        android:adjustViewBounds="true"
                        android:src="@drawable/store_icon_no_themelock" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/activity_store_no_themelock_imageview"
                        android:layout_centerHorizontal="true"
                        android:text="@string/activity_store_moretheme"
                        android:textColor="#ffffff" />
                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1" >

                    <ImageView
                        android:id="@+id/activity_store_no_ads_imageview"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="5dp"
                        android:adjustViewBounds="true"
                        android:src="@drawable/store_icon_no_ads" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/activity_store_no_ads_imageview"
                        android:layout_centerHorizontal="true"
                        android:text="@string/activity_store_noads"
                        android:textColor="#ffffff" />
                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1" >

                    <ImageView
                        android:id="@+id/activity_store_unlock_alarm_imageview"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="5dp"
                        android:adjustViewBounds="true"
                        android:src="@drawable/store_icon_unlock_alarm" />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/activity_store_unlock_alarm_imageview"
                        android:layout_centerHorizontal="true"
                        android:text="@string/activity_store_alarm"
                        android:textColor="#ffffff" />
                    
                </RelativeLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_below="@id/activity_store_icon_wrapper_A"
                android:layout_margin="10dp"
                android:orientation="horizontal" >

                <RelativeLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1" >

                    <ImageView
                        android:id="@+id/activity_store_more_table_imageview"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="5dp"
                        android:adjustViewBounds="true"
                        android:src="@drawable/store_icon_moretables" />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/activity_store_more_table_imageview"
                        android:layout_centerHorizontal="true"
                        android:gravity="center"
                        android:text="@string/activity_store_moretables"
                        android:textColor="#ffffff" />
                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1" >

                    <ImageView
                        android:id="@+id/activity_store_more_schedule_imageview"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="5dp"
                        android:adjustViewBounds="true"
                        android:src="@drawable/store_icon_add_schedule" />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/activity_store_more_schedule_imageview"
                        android:layout_centerHorizontal="true"
                        android:gravity="center"
                        android:text="@string/activity_store_moreschedules"
                        android:textColor="#ffffff" />
                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1" >

                    <RelativeLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" >

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:adjustViewBounds="true"
                            android:src="@drawable/store_icon_mascort" />
                    </RelativeLayout>
                </RelativeLayout>
            </LinearLayout>
        </RelativeLayout>
    </ScrollView>

</RelativeLayout>